--- a/exercisepdfs/Ch7/E7-4-multispecies.Rmd
+++ b/exercisepdfs/Ch7/E7-4-multispecies.Rmd
@@ -15,7 +15,7 @@ fontsize: 10pt
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
 library(knitr)
 library(Distance)
-answer <- TRUE
+answer <- FALSE
 ```
 
 # More complex analyses
