--- a/exercisepdfs/Ch7/E7-4-multispecies.Rmd
+++ b/exercisepdfs/Ch7/E7-4-multispecies.Rmd
@@ -14,8 +14,7 @@ fontsize: 10pt
 
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
 library(knitr)
-library(Distance)
-answer <- TRUE
+answer <- FALSE
 ```
 
 # More complex analyses
@@ -206,9 +205,10 @@ Before we fit any models, have a quick look at the histogram of distances:
 hist(robins$distance, breaks=20)
 ```
 
-Consistent with \citet{buckland_distance_2015}, three detection functions are fitted:
+Consistent with \citet{buckland_distance_2015}, three detection functions are fitted using the `ds()` function in the R package `Distance` \citep{distance_pkg}:
 
 ```{r, echo=TRUE, message=FALSE}
+library(Distance)
 robin.hn.herm <- ds(robins, truncation=95, transect="line", key="hn",
                     adjustment="herm", convert.units=0.1)
 robin.uni.cos <- ds(robins, truncation=95, transect="line", key="unif",
@@ -396,7 +396,7 @@ fit.hn.uni.haz <- function(data, trunc, print=TRUE) {
 }
 ```
 
-The two functions are used in tandem in the calling code below.  Note the `for` loop that iterates through three of the four species detected in the Montrave survey (great tit not analysed).
+The two functions are used in tandem in the calling code below.  Note the `for` loop that iterates through three of the four species detected in the Montrave survey (great tit not analysed because there were few detections).
 
 ```{r usefunct, echo=TRUE, eval=FALSE, fig.width=2.5, fig.height=2.5, fig.margin=TRUE, results='hold', message=FALSE, tidy=FALSE}
 for(species in c("r", "c", "w")) {
